fix viewport display

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  select,
+  textarea,
+  input {
+    font-size: 16px;
+  }
+}
