--- a/assets/main.css
+++ b/assets/main.css
@@ -1,9 +1,7 @@
 @import "tailwindcss";
 
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-  select,
-  textarea,
-  input {
-    font-size: 16px;
+@supports (-webkit-touch-callout: none) {
+  input, textarea {
+    font-size: 16px !important;
   }
 }
