--- a/assets/main.css
+++ b/assets/main.css
@@ -1,7 +1,8 @@
 @import "tailwindcss";
 
-@supports (-webkit-touch-callout: none) {
-  input, textarea {
-    font-size: 16px !important;
-  }
+input,
+textarea,
+select,
+.p-inputtext {
+  font-size: 16px !important;
 }
